Fixed alignment of GuidLinks highlight

--- a/client/styles/bline.css
+++ b/client/styles/bline.css
@@ -82,7 +82,7 @@ img {
   position: absolute;
   bottom: 12px;
   z-index: 999;
-  right: calc((100vw - 1112px)/2 + 293px);
+  right: calc((100vw - 1112px - 20px)/2 + 302px);
 }
 
 @media all and (max-width: 1112px) {
